hphp/hack/test/typecheck/tconst/intergrated_this_var.php.like_types.exp
File "intergrated_this_var.php", line 11, characters 5-18:
  this as C
File "intergrated_this_var.php", line 17, characters 5-18:
  this as (this as C & I)
File "intergrated_this_var.php", line 16, characters 27-28:
Invalid argument (Typing[4110])
File "printf.hhi", line 133, characters 30-56:
Expected ~HH\FormatString<~PlainSprintf> because it is an unenforceable type
File "intergrated_this_var.php", line 16, characters 27-28:
But got string
